# Jupyter

./: .gitignore  Draft.ipynb  Lotto.ipynb  SHAD_Seminar_01.ipynb  SHAD_Seminar_02.ipynb  SHAD_Seminar_04.ipynb  SHAD_Seminar_06.ipynb  SHAD_Seminar_07.ipynb  SHAD_Seminar_08.ipynb  SHAD_Seminar_11.ipynb  SHAD_Seminar_14.ipynb  Untitled.ipynb  YOLO_01.ipynb  pyproject.toml  requirements.txt
Kaggle/: Ames_SimpleNN.ipynb  Boston_XGBoost.ipynb  London_Ensembling.ipynb  MNIST_kNN.ipynb  Titanic_DecisionTree.ipynb
Kaggle/PyTorch/: Boston.ipynb  BostonModel.pth  Titanic.ipynb
SHAD/: SHAD_Seminar_01.ipynb  SHAD_Seminar_02.ipynb  SHAD_Seminar_03.ipynb  SHAD_Seminar_04.ipynb  SHAD_Seminar_05.ipynb  SHAD_Seminar_06.ipynb  SHAD_Seminar_07.ipynb  SHAD_Seminar_08.ipynb  SHAD_Seminar_09.ipynb  SHAD_Seminar_10.ipynb  SHAD_Seminar_11.ipynb  SHAD_Seminar_12.ipynb  SHAD_Seminar_13.ipynb  SHAD_Seminar_14.ipynb
Test/: Draft.ipynb  Finance.ipynb  Lotto.ipynb  MNISTFashion.ipynb  RANEPA Analysis.ipynb
