[project]
name = "jupyter"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlxtend>=0.25.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyfpgrowth>=1.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "xgboost>=3.3.0",
]

[tool.uv.sources]
torch = { index = "torch" }
torchvision = { index = "torch" }

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
